# Generador-de-Readme

./: README.md  generar_readme.py  pyproject.toml  pytest.ini  readme_input.txt  test_generar_readme.py
