[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generar-readme"
version = "1.0.0"
description = "Genera README.md profesionales para GitHub a partir de .txt o .docx"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Javier Grecco", email = "marcelojgrecco@gmail.com"}
]
keywords = ["readme", "github", "markdown", "docx", "badges", "documentation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "python-docx>=0.8.11",
]

[project.scripts]
generar-readme = "generar_readme:main"

[tool.setuptools]
py-modules = ["generar_readme"]
